# quicksim

./: Cargo.toml  README.md  tarpaulin-report.html
benches/: simd.rs  u8_impl.rs
src/: lib.rs  prelude.rs
src/original/: array.rs
src/traits/: array_f32.rs  array_u32.rs  array_u8.rs  mod.rs
src/x86_64/: mod.rs  simd_extensions.rs
src/x86_64/array/: f32_impl.rs  mod.rs  u32_impl.rs  u8_impl.rs
