[package]
authors = ["Jojii Jojii [_) gmx (_] net"]
name = "quicksim"
version = "0.1.0"
description = "Drop-in SIMD-accelerated replacements for common Rust algorithms, with automatic runtime AVX detection. Designed for simplicity and performance without requiring manual SIMD programming."
edition = "2024"
readme = "README.md"
repository = "https://github.com/JojiiOfficial/quicksim"
homepage = "https://github.com/JojiiOfficial/quicksim"
keywords = ["simd", "performance", "optimization", "vectorization","avx"]
license = "GPL-3.0"

[dependencies]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rand = "0.9.2"
rstest = "0.26.1"
ordered-float = "5.0.0"

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "u8_impl"
harness = false
